fix: updated editor to have no overflow in the x when in preview.

--- a/frontend/src/website-frontend/src/index.css
+++ b/frontend/src/website-frontend/src/index.css
@@ -35,7 +35,7 @@ body {
     display: grid;
     grid-template-columns: 250px 1fr; /* navbar and then the remaining space */
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 h1 {
